[package]
name = "rivet-term"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
console = "0.15"
derive_builder = "0.12"
tabled = { version = "0.16.0", features = ["ansi"] }
term_size = "0.3"
thiserror = "1.0"
tokio = { version = "1.27", default-features = false, features = ["rt"] }
